# meadow

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  entrypoint.sh  install.sh  pyproject.toml  requirements.txt  run.sh  setup.cfg  sonar-project.properties
.github/workflows/: pythonapp.yml
djangoapp/books/: models.py  views.py
djangoapp/books/migrations/: 0001_initial.py
djangoapp/books/templates/: index.html
djangoapp/djangoapp/: routers.py  settings.py  urls.py
djangoapp/login/: views.py
init.d/: run_postgres.sh
meadow/: book_searcher.py  manage.py  requirements.txt
meadow/meadow/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
meadow/meadow/migrations/: 0001_book_and_book_author.py  0002_add_file_to_book.py  0002_auto_20200419_2314.py  0003_book_isbn_10.py  0004_auto_20200421_1906.py  0005_auto_20200424_1239.py  0005_book_download_link.py  0006_mmake_isbn_charfield.py  0007_book_is_approved.py  0008_auto_20200512_1606.py
meadow/meadow/models/: __init__.py  book.py  book_author.py
meadow/meadow/serializers/: __init__.py  book.py  book_author.py
meadow/meadow/tests/: base.py
meadow/meadow/utils/: book_searcher.py  new_book.py
meadow/meadow/views/: __init__.py  new_book.py  preview.py  search.py
meadow/polls/: admin.py  models.py  views.py
meadow/polls/migrations/: 0001_initial.py  0002_book_bookauthor.py
setup.d/: install_all.sh  install_docker.sh  install_poetry.sh  install_python.sh  install_venv.sh
(+8 files in other folders)
